--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,31 @@
+.hero {
+  height: 89vh;
+  background-image: url(../../assest/img/portada.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero .hero__text {
+  text-align: center;
+  color: white;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: rgba(128, 128, 128, 0.534);
+}
+.hero .hero__button {
+  padding: 15px 10px;
+  border: 2px solid rgba(255, 255, 0, 0.699);
+  text-align: center;
+  text-decoration: none;
+  border-radius: 20px;
+}
+.hero .hero__button:hover {
+  background-color: rgba(255, 202, 58, 0.6705882353);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -58,6 +86,17 @@ form button {
 }
 form button:hover {
   background-color: #84a59b;
+}
+
+button {
+  padding: 15px;
+  border: 2px black;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 20px;
+}
+button:hover {
+  background-color: turquoise;
 }
 
 /*# sourceMappingURL=styles.css.map */
