agregado de portada nueva al index

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .hero {
   height: 89vh;
-  background-image: url(../../assest/img/portada.jpg);
+  background-image: url(../../assest/img/primaveraportada.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
