cambios en las paginas

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 
 
 .pie-pagina{
-    background-color: #b8d0ebd3;
+    background-color:#f7ef81d7;
     
 
 }
