--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 .pie-pagina {
-  background-color: rgba(184, 208, 235, 0.8274509804);
+  background-color: rgba(247, 239, 129, 0.8431372549);
 }
 
 img {
