--- a/scss/components/botones.scss
+++ b/scss/components/botones.scss
@@ -5,6 +5,6 @@ button{
     text-decoration: none;
     border-radius: 20px;
 &:hover{
-        background-color: turquoise;
+        background-color: rgba(255, 255, 0, 0.849)
     }
 }
