--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,6 +1,6 @@
 .hero{
     height: 89vh;
-    background-image: url(../../assest/img/primaveraportada.jpg);
+    background-image:url(../../assest/img/portada.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
