--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+h1 {
+  font-size: 40px;
+  color: black;
+  background-color: burlywood;
+  text-align: center;
+}
+
 .hero {
   height: 89vh;
   background-image: url(../../assest/img/portada.jpg);
