--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ h1 {
 
 .hero {
   height: 89vh;
-  background-image: url(../../assest/img/portada.jpg);
+  background-image: url(../../assest/img/primaveraportada.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
