--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -27,3 +27,22 @@
         background-color: #ffca3aab;
 }
 }
+
+
+.container{
+    display: flex;
+    overflow-x: scroll;
+    padding: 24px;
+    width: 300px;
+    scroll-snap-type: mandatory;
+    scroll-padding: 24px;
+    border-radius: 8px;
+    gap: 12px;
+
+    &_item{
+        flex: 0 0 100%;
+        padding: 24px;
+        border-radius: 8px;
+        scroll-snap-align: start;
+    }
+}
